--- a/content/posts/go-readability.mdx
+++ b/content/posts/go-readability.mdx
@@ -41,9 +41,9 @@ func (imsb *InMemoryExporter) ExportSpans(_ context.Context, spans []trace.ReadO
 
 This demonstrates a great feature of Go, implicit interface implementation, and it basically says that ExportSpans belongs to InMemoryExporter (and helps implement the interface).
 
-But notice how you can “dot” into imsb as if it were a newly-created instance of InMemoryExporter. The part of my bran on C tells me that imsb isn’t a InMemoryExporter, it’s a pointer to one, and I need to use the -&gt; operator instead of the . operator (or do something silly like (*imsb).mu.Lock()).
+But notice how you can “dot” into imsb as if it were a newly-created instance of InMemoryExporter. The part of my bran on C tells me that imsb isn’t a InMemoryExporter, it’s a pointer to one, and I need to use the -&gt; operator instead of the . operator (or do something silly like `(*imsb).mu.Lock())`.
 
-My assumption is that this syntax was chosen because it needed some syntactical representation. I don’t really have an issue with that – the * syntax isn’t a bad choice per se – but the readability of this isn’t clear to me on the outset. Maybe if I spend several more months regularly looking at Go code it’ll just be second nature.
+My assumption is that this syntax was chosen because it needed some syntactical representation. I don’t really have an issue with that – the `*` syntax isn’t a bad choice per se – but the readability of this isn’t clear to me on the outset. Maybe if I spend several more months regularly looking at Go code it’ll just be second nature.
 
 Inline declaration and validation in if blocks is confusing to me
 I find myself reading lines of code like this multiple times so that I don’t miss the logic:
@@ -54,7 +54,7 @@ if enableLocalVisualizationsStr := os.Getenv("HONEYCOMB_ENABLE_LOCAL_VISUALIZATI
 }
 ```
 
-There’s not a lot going on here – it’s assigning a value in the scope of the if declaration and checking that it’s non-empty before entering he block – but stuffing all of that onto a single line trips me up. I’ve personally mis-written the != as a == and spent more time than I’d like to admit hunting it down.
+There’s not a lot going on here – it’s assigning a value in the scope of the if declaration and checking that it’s non-empty before entering he block – but stuffing all of that onto a single line trips me up. I’ve personally mis-written the `!=` as a `==` and spent more time than I’d like to admit hunting it down.
 
 What’s funny is that I’ve written plenty of Go code in this style, and that’s because I see it everywhere. It’s either a common code convention no-no or considered idiomatic go. But either way, I wouldn’t call it readable, at least not to me.
 
@@ -197,7 +197,7 @@ I’ll admit, I genuinely do not understand what this code does when I read it. 
 
 - Inline funcs that are declared but also won’t always give back a result (that only happens on an error?)
 - The introduction of goroutines the go keyword in here made it nearly impossible to understand what’s happening in my head
-- How the heck do waitgroups relate to goroutines? Isn’t there a missing &lt;- keyword in here or something?
+- How the heck do waitgroups relate to goroutines? Isn’t there a missing `<-` keyword in here or something?
 - Now, if I run this code it’s pretty clear to me that it’s concurrently generating fibonacci numbers, but this post is about readability and I would argue it’s a failure in readability if you need to run code to see what it’s doing.
 
 Is this inherently a Go problem? No, of course not! This could probably be rewritten to use way less language constructs. But that’s the same argument that can be made for any language: confusing code is always capable of being not confusing if you encode stuff a little differently.
