--- a/content/posts/go-readability.mdx
+++ b/content/posts/go-readability.mdx
@@ -39,9 +39,9 @@ func (imsb *InMemoryExporter) ExportSpans(_ context.Context, spans []trace.ReadO
 }
 ```
 
-This demonstrates a great feature of Go, implicit interface implementation, and it basically says that ExportSpans belongs to InMemoryExporter (and helps implement the interface).
+This demonstrates a great feature of Go, implicit interface implementation, and it basically says that ExportSpans belongs to `InMemoryExporter` (and helps implement the interface).
 
-But notice how you can “dot” into imsb as if it were a newly-created instance of InMemoryExporter. The part of my bran on C tells me that imsb isn’t a InMemoryExporter, it’s a pointer to one, and I need to use the -&gt; operator instead of the . operator (or do something silly like `(*imsb).mu.Lock())`.
+But notice how you can “dot” into `imsb` as if it were a newly-created instance of `InMemoryExporter`. The part of my bran on C tells me that `imsb` isn’t a `InMemoryExporter`, it’s a pointer to one, and I need to use the `->` operator instead of the `.` operator (or do something silly like `(*imsb).mu.Lock())`.
 
 My assumption is that this syntax was chosen because it needed some syntactical representation. I don’t really have an issue with that – the `*` syntax isn’t a bad choice per se – but the readability of this isn’t clear to me on the outset. Maybe if I spend several more months regularly looking at Go code it’ll just be second nature.
 
