formatting changes for better

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,5 +1,5 @@
 ---
-title: About Me
+title: Phillip Carter
 ---
 
 In my day job, I’m a Principal PM at Honeycomb, where I lead our AI efforts. Prior to this, I drove Honeycomb's telemetry pipeline, OpenTelemetry story, and API. I also worked on the .NET team at Microsoft for 6 years.
