--- a/content/posts/llm-training-efficiency.mdx
+++ b/content/posts/llm-training-efficiency.mdx
@@ -53,18 +53,18 @@ Meta:
 DeepSeek:
 
 - H800 GPUs
-- 2.764 million of training
+- 2.764 million GPU-hours of training
 
 
 That's a **14x reduction in total compute** on worse hardware. This is an astonishing achievement.
 
 ## Is there funny business going on?
 
-There's speculation that [DeepSeek is training models on OpenAI outputs](https://bsky.app/profile/beebl.es/post/3lfqdwtttvs2y), which may allow them to bypass a lot of work to assemble better training data. It's not uncommon for Chinese companies to ignore the Terms of Service for US companies (and vice/versa), so this may also be a contributing factor.
+There's speculation that [DeepSeek is training models on OpenAI outputs](https://bsky.app/profile/beebl.es/post/3lfqdwtttvs2y), which may allow them to bypass a lot of work to assemble better training data. It's not uncommon for Chinese companies to ignore the Terms of Service for US companies (and vice versa), so this may also be a contributing factor.
 
-However, I don't think this is a unique problem. I would expect that every AI lab is "stealing" from one another to various extents because it's an extremely competitive market right now. Moreover, as a consumer, I don't really are. I care a lot more that we can get high quality models for less compute.
+However, I don't think this is a unique problem. I would expect that every AI lab is "stealing" from one another to various extents because it's an extremely competitive market right now. Moreover, as a consumer, I don't really care. I care a lot more that we can get high quality models for less compute.
 
-## Will 2025 be the year of compute efficient training?
+## Will 2025 be the year of compute-efficient training?
 
 There's a lot of demand for AI models that run faster, which is why they run faster for less compute now. But there's not as much demand for less compute used in training, at least directly. I may balk at the carbon emissions of a large-scale training run, but the final output is an artifact that runs efficiently.
 
