--- a/content/posts/llm-training-efficiency.mdx
+++ b/content/posts/llm-training-efficiency.mdx
@@ -10,7 +10,7 @@ This model was among the last of a flurry of model releases by the end of 2024, 
 
 ## 2024: the year of runtime efficiency gains in LLMs
 
-A major theme of 2024 was taking GPT-4 levels of model quality, but making them so efficient to run that you can even use them on an M1 laptop. In reality, this is a bit more complicated, since most models are released as a family of models, some of which are quite small (7B parameters or less) and some of which are quite large (70B parameters or more). The 70B+ models can still be run on local hardware, but the barrier to entry is a lot higher than the 7B+ models.
+A major theme of 2024 was making models with GPT-4 levels of quality, but making them so efficient to run that you can even use them on an M1 laptop. In reality, this is a bit more complicated, since most models are released as a family of models, some of which are quite small (7B parameters or less) and some of which are quite large (70B parameters or more). The 70B+ models can still be run on local hardware, but the barrier to entry is a lot higher than the 7B+ models.
 
 This has been an extremely welcome development. Like many people, I was offended by the compute requirements needed to run models in 2023, and couldn't make much use of a lot of their capabilities in practice because integrating GPT-4 (or similar) to an application meant making that application very slow.
 
@@ -27,7 +27,7 @@ Most American AI labs have done two things:
 1. Buy a ridiculous amount of the top-of-the-line AI chips from NVIDIA
 2. Not worry about burning GPU cycles on these chips
 
-They have lots of money to buy the hardware and lots of money to spend on compute. They're not in profit-seeking mode and they do not suffer scarcity in terms of capital nor talent.
+They have lots of money to buy the hardware and lots of money to spend on compute. They're not in profit-seeking mode and they don't suffer scarcity in capital nor talent.
 
 However, this is not necessarily true for AI labs around the world. The [CHIPS and Science Act](https://en.wikipedia.org/wiki/CHIPS_and_Science_Act) enacted under the Biden administration, amongst many other things, imposes a sanction on China. Chinese AI labs don't get the top of the line AI hardware that American companies predominantly design. And so as a consequence, Chinese AI labs must work with substandard hardware.
 
