--- a/content/posts/llm-training-efficiency.mdx
+++ b/content/posts/llm-training-efficiency.mdx
@@ -10,7 +10,7 @@ This model was among the last of a flurry of model releases by the end of 2024, 
 
 ## 2024: the year of runtime efficiency gains in LLMs
 
-A major theme of 2024 was making models with GPT-4 levels of quality, but making them so efficient to run that you can even use them on an M1 laptop. In reality, this is a bit more complicated, since most models are released as a family of models, some of which are quite small (7B parameters or less) and some of which are quite large (70B parameters or more). The 70B+ models can still be run on local hardware, but the barrier to entry is a lot higher than the 7B+ models.
+A major theme of 2024 was making models with GPT-4 levels of quality, but making them so efficient to run that you can even use them on an M1 laptop. In reality, this is a bit more complicated, since most models are released as a family of models, and some are quite small (7B parameters or less) whereas some are quite large (70B parameters or more). The 70B+ models can still be run on a large enough GPU, but the barrier to entry is a lot higher than the 7B+ models.
 
 This has been an extremely welcome development. Like many people, I was offended by the compute requirements needed to run models in 2023, and couldn't make much use of a lot of their capabilities in practice because integrating GPT-4 (or similar) to an application meant making that application very slow.
 
