--- a/content/posts/llm-training-efficiency.mdx
+++ b/content/posts/llm-training-efficiency.mdx
@@ -14,7 +14,7 @@ A major theme of 2024 was making models with GPT-4 levels of quality, but making
 
 This has been an extremely welcome development. Like many people, I was offended by the compute requirements needed to run models in 2023, and couldn't make much use of a lot of their capabilities in practice because integrating GPT-4 (or similar) to an application meant making that application very slow.
 
-Now a year later, the world is completely different. Tasks that used to take OpenAI 30 seconds to run on a fleet of GPUs now take 1 second on my desktop gaming computer. And I'm excited to squeeze even more compute efficiency out of these models in the future, as I believe there's still much ground to cover.
+Now a year later, the world is completely different. Tasks that used to take OpenAI 30 seconds to run on a fleet of GPUs now take 1 second on my desktop gaming computer. And I'm excited to squeeze even more compute efficiency out of these models in the future, as I believe there's still much ground to cover. In particular, I'm excited at some early progress in denser, smaller model weights that don't suffer quality issues.
 
 But what about training? 2024 didn't show much progress on that front until DeepSeek V3.
 
