--- a/content/posts/llm-training-efficiency.mdx
+++ b/content/posts/llm-training-efficiency.mdx
@@ -55,7 +55,7 @@ DeepSeek:
 - 2.764 million GPU-hours of training
 
 
-That's a **14x reduction in total compute** on worse hardware. This is an astonishing achievement.
+That's a **14x reduction in total compute** on worse hardware. This is an amazing achievement.
 
 ## Is there funny business going on?
 
