--- a/content/posts/academic-product-debate.mdx
+++ b/content/posts/academic-product-debate.mdx
@@ -2,6 +2,7 @@
 title: A case for academic debate in product development
 description: A small screed about something that's bothered me about modern Product Management practices.
 date: "2024-11-29"
+tags: product-management
 ---
 
 In the current product management discourse, it’s very much in style to try to “science” your way into decisions around how products should work. The common example of it looks something like this:
