--- a/content/posts/best-docs.mdx
+++ b/content/posts/best-docs.mdx
@@ -2,6 +2,7 @@
 title: The best docs are the docs you don't need
 description: My opinion on the intersection of docs, developer tool ergonomics, and building things deliberately.
 date: "2024-01-14"
+tags: product-management, devex
 ---
 
 If a developer product is self-consistent and intuitive, it can get by with surprisingly little documentation.
