--- a/content/posts/go-readability.mdx
+++ b/content/posts/go-readability.mdx
@@ -2,6 +2,7 @@
 title: When the readability of Go falls off a cliff
 description: My take on how "Go is readable" doesn't mean much to me.
 date: "2024-01-15"
+tags: golang, devex
 ---
 
 I’ve had to pleasure of working on programming languages for several years, including [helping design several features in one of them](https://github.com/fsharp/fslang-design). I’ve always taken an interest into the often unquantifiable, squishy, touchy, feely-weely aspects of languages. Language design is interesting because it’s both technical and art-like. When you help design a language, you’ll straddle the world between extremely complex backwards compatibility issues and whether or not something “feels right”.
