--- a/content/posts/llm-training-efficiency.mdx
+++ b/content/posts/llm-training-efficiency.mdx
@@ -2,6 +2,7 @@
 title: LLM training is finally getting more efficient
 description: DeepSeek V3 shows a 14x reduction in compute to train a state-of-the-art AI model.
 date: "2025-01-18"
+tags: llms
 ---
 
 On December 26th 2024, [DeepSeek V3](https://huggingface.co/deepseek-ai/DeepSeek-V3) was released by the [DeepSeek](https://www.deepseek.com/) organization, a Chinese AI lab.
