--- a/content/posts/observability-cap-theorm.mdx
+++ b/content/posts/observability-cap-theorm.mdx
@@ -1,7 +1,8 @@
 ---
-title: The Observability CAP Theorm
+title: The Observability CAP Theorem
 description: My elaboration on why I think Observability as a CAP theorm of its own.
 date: "2024-09-14"
+tags: observability, data, devex
 ---
 
 Observability is a pretty wild field. Almost everyone has their own definition of it. I won’t get into that nonsense. Instead, I’ll elaborate a bit on what I believe to be a fundamental nature of this space.
