--- a/content/posts/llm-training-efficiency.mdx
+++ b/content/posts/llm-training-efficiency.mdx
@@ -32,7 +32,7 @@ They have lots of money to buy the hardware and lots of money to spend on comput
 
 However, this is not necessarily true for AI labs around the world. The [CHIPS and Science Act](https://en.wikipedia.org/wiki/CHIPS_and_Science_Act) enacted under the Biden administration, amongst many other things, imposes a sanction on China. Chinese AI labs don't get the top of the line AI hardware that American companies predominantly design. And so as a consequence, Chinese AI labs must work with substandard hardware.
 
-One unintended consequence of creating scarcity in the market is that it forces different levels of innovation. In the case of DeepSeek, they had worse GPUs and less of them.
+One unintended consequence of creating scarcity in the market is that it forces different levels of innovation. In the case of DeepSeek, they had to find a way to make do with worse GPUs and less of them.
 
 ## DeepSeek V3: A 14x reduction in GPU hours on worse hardware
 
@@ -42,7 +42,7 @@ I like to compare [DeepSeek V3](https://huggingface.co/deepseek-ai/DeepSeek-V3) 
 - Both support long(ish) context inputs
 - Both had extensive post-training runs, like any modern LLM these days
 
-But when you stack up the compute, DeepSeek V3 is astonishing:
+But when you stack up the compute, DeepSeek V3 is astonishing.
 
 
 Meta:
